@@ -7,6 +7,7 @@
 <li>Drop Mac OS X 10.3 Panther support. Vienna 2.3 needs 10.4 or greater to launch.</li>
 <li>Leopard fix: allow option-left-arrow and option-right-arrow as keyboard shortcuts for closing and opening group folders.</li>
 <li>Bug fix: when validating a URL, escape any special query characters.</li>
+<li>Fix assertion failure when the user enters an invalid URL string in the address bar.</li>
 </ul>
 </body>
 </html>
