@@ -14,6 +14,7 @@ Thanks!
 - Drop Mac OS X 10.3 Panther support. Vienna 2.3 needs 10.4 or greater to launch.
 - Leopard fix: allow option-left-arrow and option-right-arrow as keyboard shortcuts for closing and opening group folders.
 - Bug fix: when validating a URL, escape any special query characters.
+- Fix assertion failure when the user enters an invalid URL string in the address bar.
 
 
 2.3.0.2300
